# burrito

./: Cargo.toml  README.md
burrito/: README.md
burrito_docs/: README.md  burrito_asymmetric_box.md  burrito_recursive.md  burrito_symmetric_box.md  plaintext.md  sensitive_text.md
burrito_docs/Standard Fields/: README.md  security.md  standard.md
src/: database.rs  encryption.rs  lib.rs  signing.rs
src/providers/: burrito_box.rs  burrito_box_sym.rs  mod.rs  plaintext.rs  recursive.rs  sensitive_text.rs
src/waiters/: burrito_box.rs  burrito_box_password_sym.rs  burrito_box_sym.rs  mod.rs  recursive.rs  sensitive_text.rs
