[package]
name = "burrito-secrets"
version = "0.0.0-a0"
edition = "2021"
license = "MIT"

[dependencies]
# Cryptography
dryoc = { version = "0.6.0", features = ["simd_backend", "nightly"] }
# Errors
anyhow = "^1.0"
# Serialization
serde = { version = "^1.0", features = ["derive"] }
bson = { version = "^2.11" }