[package]
name = "burrito-secrets"
version = "0.0.0-a1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/T-O-R-U-S/burrito"
description = "A library for storing secrets in BSON format."
authors = ["Mahmoud Moursy <mahmoud_moursy@icloud.com>"]
keywords = ["bson", "cryptography", "encryption", "secret", "storage"]
categories = ["cryptography", "encoding", "authentication"]

[dependencies]
# Cryptography
dryoc = { version = "0.6.0", features = ["simd_backend", "nightly"] }
# Errors
anyhow = "^1.0"
# Serialization
serde = { version = "^1.0", features = ["derive"] }
bson = { version = "^2.11" }